# CodeSnap

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  codesnap.py  config.example.json  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
codesnap/: __init__.py  cli.py
codesnap/config/: __init__.py  settings.py  validator.py
codesnap/core/: __init__.py  formatter.py  git_handler.py  processor.py  scanner.py
codesnap/tests/: __init__.py  test_config.py  test_processor.py  test_scanner.py
codesnap/utils/: __init__.py  exceptions.py  logger.py
